# app_permission_manager

./: CHANGELOG.md  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/me/app_permission_manager/: AppPermissionManagerPlugin.kt
android/src/test/kotlin/com/me/app_permission_manager/: AppPermissionManagerPluginTest.kt
example/: README.md  pubspec.yaml
example/android/: local.properties
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
example/android/app/src/main/kotlin/com/me/app_permission_manager_example/: MainActivity.kt
example/ios/Runner/: GeneratedPluginRegistrant.m  Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
ios/: Package.swift  app_permission_manager.podspec
ios/Classes/: AppPermissionManagerPlugin.swift
lib/: app_permission_manager.dart  app_permission_manager_method_channel.dart  app_permission_manager_platform_interface.dart  app_permission_manager_types.dart  app_permission_manager_web.dart
macos/: app_permission_manager.podspec
macos/Classes/: AppPermissionManagerPlugin.swift
windows/: CMakeLists.txt  app_permission_manager_plugin.cpp  app_permission_manager_plugin.h
